--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+ .field_with_errors {
+  display: inline;
+ }
+
+ #article_title {
+  border: 2px solid red;
+ }
+
+ #article_content {
+  border: 2px solid red;
+ }
