_form.html.erb for new.html.erb and edit.html.erb

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,10 +18,10 @@
   display: inline;
  }
 
- #article_title {
+ /* #article_title {
   border: 2px solid red;
  }
 
  #article_content {
   border: 2px solid red;
- }
+ } */
