--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,20 @@
 <h1>文章列表</h1>
 
 <%= link_to "新增文章", new_blog_path %>
+<%= flash[:notice]%>
+
+<table>
+  <tr>
+    <td>Title</td>
+  </tr>
+
+  <% @articles.each do |article| %>
+  <tr>
+    <td><%= link_to article.title, article_path(article) %></td>
+    <td><%= link_to "編輯", edit_article_path(article) %></td>
+    <td><%= link_to "刪除", article_path(article), method: :delete, data: {confirm: "是否刪除"} %></td> 
+  </tr>
+  
+
+  <% end %>
+</table>
