--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <%= render "shared/navbar" %>
+    <%= render "shared/flash" if notice%>
+
     <%= yield %>
+
   </body>
 </html>
